# PKUcoursesCode

IntroComputationalNeuralScience/final_project/: CNN_SNN_CIFAR10.py  Knowledge_Graph.py  SJ_CNN2SNN.py  Surrogate_Funtion_Training.py  Visual_CNN.py  ZOO_test.py  sim_mul.py
IntroComputationalNeuralScience/lab2/: bAPs.py  lab2_DendriticComputation.rar
IntroComputationalNeuralScience/lab2/lab2_DendriticComputation/codes_lab2/: README.md  bAPs.py  cell.py
IntroComputationalNeuralScience/lab2/lab2_DendriticComputation/codes_lab2/mod/: cat1g.mod  cat1h.mod  cat1i.mod  hh1.mod
IntroComputationalNeuralScience/lab2/lab2_DendriticComputation/codes_lab2/models/: L5PCbiophys5.hoc
IntroComputationalNeuralScience/lab3/: CMSA.ipynb  Watch_pattern.py  all_run.py
IntroComputationalNeuralScience/lab4/code/: AI_CANN.py  Attractor_Network.ipynb  CANN.py  CANN_SFA.py  HebbLearning_CANN.py  Network.ipynb  S4 【作业】 Continuous_Attractor_Neural_Network.ipynb  cann-orthogonal-hebb-simplified(1).py  cann-orthogonal-hebb-simplified.py  chair_features_resnet18.npy  feature-extraction-models.py  hand_written_BN.py  hopfield_denoise.py  modified-cann-code.py  plot_w_matrix.py
LLMA/hw1/code/bpe/: bpe.py  count_token.py  gpt_tokenizer.py  vocab.json
LLMA/hw1/code/lora/: Lora_alpaca.ipynb  environment.yml  exp_lora.py  lora_imdb_review.ipynb  run_exp.py  test_lora.py
LLMA/hw1/code/lora/prev_code/: Lora.ipynb  lora.py
LLMA/hw1/code/pretrain/: GPT2.py  dataloader.py
LLMA/hw2/: dpo.ipynb
LLMA/hw2/code/: dpo.py  rm.py
LLMA/hw2/results/Visualize/: V_DPO_vs_base.py  V_cross_score.py  V_embd.py  V_score.py
LLMA/hw2/results/exp_code/: prompts.json  val_score.json
LLMA/hw2/results/exp_code/bash_scripts/: DPO_train.sh  rm_eval.sh  rm_train.sh
LLMA/hw2/results/exp_code/exp_scripts/: HOMEWORK.py  batch_gen.py  cache_hf_datasets.py  cache_hf_model.py  eager_gen.py  eval_one_gen.py  load_dataset_val_responses.py  score.py  see_dataset.py  template_prompt.py
LLMA/hw2/results/exp_code/responses/: DPO_responses.json  qwen_responses.json
LLMA/hw2/results/exp_code/scores/: scores_RM_dpo.json  scores_RM_qwen.json  scores_qwen_dpo.json  scores_qwen_qwen.json
LLMA/hw2/text2textDPO/: decoder_only.py  enc-dec.py  gen.py  mean_imp_DPO.ipynb  neg_loss_DPO.py  qwen_gen.py  text2text_DPO.ipynb  train_eval_DPO.py
LLMA/hw3/: enhance_doca.c  exp_record.md  intro.md
LLMA/hw3/doca/applications/allreduce/: allreduce.c  allreduce_client.c  allreduce_client_params.json  allreduce_core.c  allreduce_core.h  allreduce_daemon.c  allreduce_daemon_params.json  allreduce_mem_pool.c  allreduce_mem_pool.h  allreduce_reducer.c  allreduce_reducer.h  allreduce_ucx.c  allreduce_ucx.h  allreduce_utils.h  meson.build
LLMA/hw3/doca/applications/allreduce/dependencies/: meson.build
QTproject/: 61-源代码.txt  第二阶段任务.md
QTproject/realProgect/: .gitignore  CMakeLists.txt  alarm.cpp  alarm.h  alarm.ui  calendarmc.cpp  calendarmc.h  calendarmc.ui  choosetheme.cpp  choosetheme.h  choosetheme.ui  clockhzj.cpp  clockhzj.h  clockhzj.ui  countdowndaysmc.cpp  countdowndaysmc.h  countdowndaysmc.ui  coursemsy.cpp  coursemsy.h  coursemsy.ui  dailymsy.cpp  dailymsy.h  dailymsy.ui  dailymsy2.cpp  dailymsy2.h  dailymsy2.ui  dailymsy3.cpp  dailymsy3.h  dailymsy3.ui  dailymsy4.cpp  dailymsy4.h  dailymsy4.ui  dailymsy5.cpp  dailymsy5.h  dailymsy5.ui  dailymsy_allin.cpp  dailymsy_allin.h  dailymsy_allin.ui  global.cpp  global.h  (+25 more)
Reversi/: FileName.cpp
TrustworthyML/hw1/hw1_handout/: homework1.ipynb
TrustworthyML/hw2/homework2_handout/: homework_attack.ipynb  homework_defense.py
TrustworthyML/hw2/homework2_handout/script/: plot_test.py  record.txt  run_experiments.py
TrustworthyML/hw3/backdoor/: generate_clb_attack.py  generate_mask.py  plot_a.py  prune_network.py  run_exp.py  stage1_result.jsonl  train_backdoor.py
TrustworthyML/hw3/backdoor/data/: poison_cifar.py
TrustworthyML/hw3/backdoor/logs/: ANP_log.txt  badnets_log.txt  benign.txt  blend_log.txt  cleanlabel_log.txt
TrustworthyML/hw4/: Classwise.ipynb  MIA.ipynb  Samplewise.ipynb
World-of-Warcraft/: 魔兽3（开战）.cpp  魔兽终极版.cpp
ants_CS61A/: .ok_history  ants.py  ants_gui.py  ants_gui.spec
